--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 * {
+    user-select: none;
     margin: 0;
     padding: 0;
     box-sizing: border-box;
@@ -112,6 +113,7 @@ nav{
 /*Main CSS*/
 
 main{
+    position: relative;
     margin: 0px 0px 0px 0px;
     background-color: #ffffff;
     width: 100%;
@@ -120,6 +122,8 @@ main{
     padding: 0px 0px 0px 0px;
 }
 #mainScreen{
+    position: relative;
+    justify-self: center;
     margin-bottom: 50px;
     width: 100%;
     height: auto;
@@ -130,12 +134,11 @@ main{
     flex-direction: row;
     border-bottom: #dddddd solid 1px;
 }
-#mainscreenImage{
-    width: 100%;
-    height: 100%;
-    overflow: hidden;
-}
 #leftScreen{
+    opacity: 1;
+    display:flex;
+    left: 0;
+    top: 0;
     display: flex;
     align-items: center;
     width: 50%;
@@ -143,10 +146,37 @@ main{
 }
 
 #rightScreen{
+    opacity: 1;
+    display: flex;
+    right: 0;
+    top: 0;
     width: 50%;
     height: 100%;
+    align-items: center;
+}
+
+#mainscreenImage{
+    position: relative;
+    width: 100%;
+    height: 100%;
+}
+.text-div{
+    position: absolute;
+    margin: 15px;
+}
+#text-coder , #text-designer {
+    color: #323232;
+    padding: 5px;
     display: flex;
     align-items: center;
+    justify-content: left;
+    font-size: 34px;
+    margin: 15px;
+}
+.text-para{
+    color: #838383;
+    margin: 15px;
+    font-size: 18px;
 }
 
 #lowermain{
